# enryo

./: .gitignore  AGENTS.md  CNAME  FULL_PLAN.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  turbo.json
.github/workflows/: deploy.yml
apps/api/: .env  .env.example  Cargo.toml
apps/api/migrations/: 001_initial_schema.json  001_initial_schema.sql  002_add_workspace_settings.sql
apps/api/src/: db.rs  main.rs
apps/api/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
apps/api/src/channels/: handlers.rs  mod.rs
apps/api/src/llm/: mod.rs
apps/api/src/messages/: mod.rs
apps/api/src/users/: mod.rs
apps/api/src/workspaces/: handlers.rs  mod.rs
apps/api/src/ws/: handlers.rs  mod.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: generate-icons.mjs  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ChannelList.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EditChannelDialog.tsx  MessageItem.tsx  RenameDialog.tsx  WorkspaceList.tsx  WorkspaceTheme.tsx
apps/desktop/src/lib/: api.ts  colors.ts
apps/desktop/src/pages/: Chat.tsx  Login.tsx  MainLayout.tsx  (+1 more)
apps/web/: index.html  package.json  tailwind.config.js
apps/web/src/: index.css
assets/: index-DAu2cXc6.js  index-Dq21MZ9U.css  index-RgY04flT.css  index-UfFAGEeA.js
scripts/: setup-db.sh
src/: App.tsx
src/components/: Features.tsx  Header.tsx
(+6 files in other folders)
