[package]
name = "enryo-api"
version = "0.1.0"
edition = "2021"
authors = ["Enryo Team"]
description = "Enryo chat server"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
http = "1"

[dev-dependencies]
tokio-test = "0.4"
