[package]
name = "enryo-desktop"
version = "0.1.0"
description = "Enryo Desktop - The Mindful Workspace"
authors = ["Enryo Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "enryo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
